--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
     "strict": true,
     "esModuleInterop": true
   },
-  "include": ["index.d.ts", "src"],
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
